--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-"Hello Io" 
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <title>Mateus Andrade GitHub.io</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+<style>
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+</style>
+<body>
+
+<p>Meu GitHub.io, como ando preguiçoso e usando apenas frameworks pra CSS, JS, e etc, vou desenvolver meu "io" usando apenas
+    HTML, SASS, JS e talvez um Angular sem usar nenhum framework como o Bootstrap por exemplo.
+</p>
+
+<img align="center" width="150" src="https://media.tenor.co/images/0c498e6c23b281571b15d751fedb243a/tenor.gif">
+
+<p>Thats all folks. :)</p>
+
+
+</body>
+</html>
