--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 </style>
 <body>
 
+    <img src="assets/img/profile_picture.jpg">
+
 <p>Meu GitHub.io, como ando preguiçoso e usando apenas frameworks pra CSS, JS, e etc, vou desenvolver meu "io" usando apenas
     HTML, SASS, JS e talvez um Angular sem usar nenhum framework como o Bootstrap por exemplo.
 </p>
 
-<img align="center" width="150" src="https://media.tenor.co/images/0c498e6c23b281571b15d751fedb243a/tenor.gif">
-
-<p>Thats all folks. :)</p>
 
 
 </body>
