Adiconado arquivo grunt

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <title>Mateus Andrade GitHub.io</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="assets/css/style.min.css" rel="stylesheet">
 </head>
 <style>
     body{
@@ -14,13 +14,24 @@
 </style>
 <body>
 
-    <img src="assets/img/profile_picture.jpg">
+<header>
+    <div class="container">
+        <div class="centraliza-conteudo">
+            <img class="img-avatar centraliza-conteudo border-circle" src="assets/img/profile_picture.jpg">
+        </div>
+    </div>
 
-<p>Meu GitHub.io, como ando preguiçoso e usando apenas frameworks pra CSS, JS, e etc, vou desenvolver meu "io" usando apenas
-    HTML, SASS, JS e talvez um Angular sem usar nenhum framework como o Bootstrap por exemplo.
-</p>
+</header>
 
+<section>
+    <article>
+        //todo
+    </article>
+</section>
 
+<footer>
+    //footer
+</footer>
 
 </body>
 </html>
