--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
 
 <header>
     <div class="container">
-        <div class="centraliza-conteudo">
-            <img class="img-avatar centraliza-conteudo border-circle" src="assets/img/profile_picture.jpg">
-            <p></p>
+        <div style="border:1px solid black;" class="container-box-top centraliza-conteudo">
+            <img class="img-avatar center-block border-circle" src="assets/img/profile_picture.jpg">
+            <p class="titulo-header" align="center">Mateus Andrade.</p>
+            <p class="subtitulo-header" align="center">Um pequeno "resumo":</p>
+
+            <div class="center-block">
+                <a href="#" class="btn btn-nav center-block">Botão</a>
+            </div>
+
         </div>
     </div>
 
