--- a/index.html
+++ b/index.html
@@ -1,44 +1,120 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" ng-app="io">
 <head>
     <title>Mateus Andrade GitHub.io</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="assets/css/style.min.css" rel="stylesheet">
+    <!--Styles-->
+    <link href="app/assets/css/style.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto+Slab" rel="stylesheet">
+    <link href="app/assets/css/bootstrap.min.css" rel="stylesheet">
+    <!--Scripts-->
+    <script src="app/assets/js/jquery.min.js"></script>
+    <script src="app/assets/js/bootstrap.min.js"></script>
+    <script src="app/assets/js/angular.min.js"></script>
+    <script src="app/assets/js/angular-route.min.js"></script>
+    <!--Imports-->
+    <script src="app/app.js"></script>
+    <script src="app/controller/Controller.js"></script>
 </head>
-<style>
-    body{
-        font-family: Arial, Helvetica, sans-serif;
-    }
+<body ng-controller="indexController">
 
-</style>
-<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 background-topo">
+                <img class="img-circle img-responsive center-block" width="200" src="app/assets/img/profile_picture.jpg">
+                <p class="text-center legenda-profile-picture">Mateus Andrade</p>
+                <p class="text-center">texto texto texto texto texto </p>
 
-<header>
-    <div class="container">
-        <div style="border:1px solid black;" class="container-box-top centraliza-conteudo">
-            <img class="img-avatar center-block border-circle" src="assets/img/profile_picture.jpg">
-            <p class="titulo-header" align="center">Mateus Andrade.</p>
-            <p class="subtitulo-header" align="center">Um pequeno "resumo":</p>
+                <div class="alinha-botao-setor">
+                    <button class="btn btn-default center-block btn-link-perfil">
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </button>
+                </div>
 
-            <div class="center-block">
-                <a href="#" class="btn btn-nav center-block">Botão</a>
+            </div>
+        </div>
+
+        <div class="row background-sobre">
+            <div class="col-md-6">
+                <h4 class="h1-projetos">Projetos</h4>
+                <p>Alguns projetos que fiz ou contribui:</p>
+
+                <ul class="list-group">
+                    <li class="list-item">
+                        <a href="#">Projeto ( Linguagem )</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#">Projeto ( Linguagem )</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#">Projeto ( Linguagem )</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#">Projeto ( Linguagem )</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#">Projeto ( Linguagem )</a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="col-md-6">
+                <h4 class="h1-projetos">Alguns "etcs":</h4>
+
+                <div class="progress-personalidade">
+                    <p class="h1-projetos">Star Wars</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-starwars" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="progress-personalidade">
+                    <p class="h1-projetos">Star Wars</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-starwars" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="progress-personalidade">
+                    <p class="h1-projetos">Star Wars</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-starwars" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="progress-personalidade">
+                    <p class="h1-projetos">Star Wars</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-starwars" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-md-12">
+
+                <div class="alinha-botao-setor">
+                    <button class="btn btn-default center-block btn-link-perfil">
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </button>
+                </div>
+
             </div>
 
         </div>
+
+        <div class="row">
+            <div class="col-md-12 background-topo">
+                //Foto
+            </div>
+        </div>
     </div>
-
-</header>
-
-<section>
-    <article>
-        //todo
-    </article>
-</section>
-
-<footer>
-    //footer
-</footer>
 
 </body>
 </html>
