--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-md-12 background-topo">
                 <img class="img-circle img-responsive center-block" width="200" src="app/assets/img/profile_picture.jpg">
-                <p class="text-center legenda-profile-picture">Mateus Andrade</p>
+                <p class="text-center legenda-profile-picture typewriter"><span>Mateus Andrade</span></p>
                 <p class="text-center">texto texto texto texto texto </p>
 
                 <div class="alinha-botao-setor">
