--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         <div class="row">
             <div class="col-md-12 background-topo">
                 <img class="img-circle img-responsive center-block" width="200" src="app/assets/img/profile_picture.jpg">
-                <p class="text-center legenda-profile-picture typewriter"><span>Mateus Andrade</span></p>
-                <p class="text-center">texto texto texto texto texto </p>
+                <p class="text-center legenda-profile-picture">Mateus Andrade</p>
+                <div class="typewriter">
+                    <p class="text-center">texto texto texto texto texto </p>
+                </div>
 
                 <div class="alinha-botao-setor">
                     <button class="btn btn-default center-block btn-link-perfil">
@@ -132,17 +134,6 @@
 
             </div>
         </div>
-
-        <div class="row" style="width:100%;bottom:0;position:absolute;">
-            <div class="col-md-12 background-sobre">
-                <h4 class="h1-projetos">Caso você queira entrar em Contato...</h4>
-
-                //Implementar pequena validacao pra exibir o email
-                
-
-            </div>
-        </div>
-                
 
     </div>
 
