--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Scripts-->
     <script src="app/assets/js/jquery.min.js"></script>
     <script src="app/assets/js/bootstrap.min.js"></script>
+    <script src="app/assets/js/animate-cursor.min.js"></script>
     <script src="app/assets/js/angular.min.js"></script>
     <script src="app/assets/js/angular-route.min.js"></script>
     <!--Imports-->
@@ -24,9 +25,10 @@
             <div class="col-md-12 background-topo">
                 <img class="img-circle img-responsive center-block" width="200" src="app/assets/img/profile_picture.jpg">
                 <p class="text-center legenda-profile-picture">Mateus Andrade</p>
-                <div class="typewriter">
-                    <p class="text-center">texto texto texto texto texto </p>
-                </div>
+                
+                <p class="text-center typewrite" data-period="2000" data-type='[ "Desenvolvedor Full Stack", "Desenvolvedor Front-End", "Leitor", "Fã de Star Wars" ]'>
+                    <span class="wrap"></span>
+                </p>
 
                 <div class="alinha-botao-setor">
                     <button class="btn btn-default center-block btn-link-perfil">
