Base do layout feita

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="col-md-6">
-                <h4 class="h1-projetos">Alguns "etcs":</h4>
+                <h4 class="h1-projetos">Personalidade:</h4>
 
                 <div class="progress-personalidade">
                     <p class="h1-projetos">Star Wars</p>
@@ -115,25 +115,73 @@
 
         <div class="row">
             <div class="col-md-12 background-topo">
-                <h4 class="h1-projetos">Você pode me encontrar nos seguintes endereços:</h4>
+                <h4 class="h1-projetos">Caso queira entrar em Contato você pode me achar em:</h4>
 
-                <div class="col-md-4">
-                    GitHub
+                <div class="bloco-find">
+                    <div class="col-md-4">
+                        <p class="text-center">
+                            <a class="link" href="www.github.com/MateusAndrade">
+                                <img class="img-links center-block" src="app/assets/img/github.png">
+                                GitHub
+                            </a>
+                        </p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <p class="text-center">
+                            <a class="link" href="www.github.com/MateusAndrade">
+                                <img class="img-links center-block" src="app/assets/img/linkedin.png">
+                                Linkedin
+                            </a>
+                        </p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <p class="text-center">
+                            <a class="link" href="www.github.com/MateusAndrade">
+                                <img class="img-links center-block" src="app/assets/img/medium.png">
+                                Medium
+                            </a>
+                        </p>
+                    </div>
+
+
                 </div>
 
-                <div class="col-md-4">
-                    Linkedin
+            </div>
+        </div>
+
+        <div class="row background-sobre" >
+            <div class="col-md-8 col-md-offset-4">  
+                <h4 class="h1-projetos">Ou me enviar um Email:</h4>
+                <p></p>
+                <div class="center-block">
+                    <form class="col-md-6">
+                        <label>Nome:</label>
+                        <input class="form-control">  
+                        <br>                          
+                        <label>Assunto:</label>                        
+                        <select class="form-control">
+                            <option>Star Wars</option>
+                            <option>Star Wars</option>
+                            <option>Star Wars</option>
+                            <option>Star Wars</option>
+                        </select>
+                        <br>
+                        <label>Email:</label>
+                        <input class="form-control">    
+                        <br>
+                        <button class="btn btn-default btn-block">Enviar</button>
+                    </form>
                 </div>
 
-                <div class="col-md-4">
-                    Skoob
-                </div>
+            </div>
+            
+        </div>
 
-                <br>
-                <br>
-                <br>
-                <br>
-
+        <div class="row">
+            <div class="col-md-12 background-topo">
+                //Pixel Art
             </div>
         </div>
 
