Adicionadas dependencias do Node, Bower e Gulp para automatizar alguns processos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <title>MateusAndrade.io</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/vanilla.css" rel="stylesheet">
+    <!-- Styles -->
+    <link href="libs/css/main.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="libs/css/bootstrap.min.css" rel="stylesheet">
+    <!-- AnimateCSS -->
+    <link href="libs/css/animate.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -20,8 +25,15 @@
     </section>
 
     <footer>
-        
+
     </footer>
 
+    <!-- Script -->
+    <!-- Jquery -->
+    <script src="libs/js/jquery.min.js"></script>
+    <!-- PopperJS -->
+    <script src="libs/js/popper.js"></script>
+    <!-- Bootstrap -->
+    <script src="libs/js/bootstrap.min.js"></script>
 </body>
 </html>
