--- a/index.html
+++ b/index.html
@@ -5,35 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Styles -->
-    <link href="libs/css/main.css" rel="stylesheet">
-    <!-- Bootstrap -->
-    <link href="libs/css/bootstrap.min.css" rel="stylesheet">
-    <!-- AnimateCSS -->
-    <link href="libs/css/animate.min.css" rel="stylesheet">
+    <link href="assets/css/vanilla.css" rel="stylesheet">
 </head>
 <body>
-
-    <header>
-        //Cabeçalho
-        <nav>
-            //menu
-        </nav>
-    </header>
-
-    <section>
-        //Corpo Principal
-    </section>
-
-    <footer>
-
-    </footer>
-
-    <!-- Script -->
-    <!-- Jquery -->
-    <script src="libs/js/jquery.min.js"></script>
-    <!-- PopperJS -->
-    <script src="libs/js/popper.js"></script>
-    <!-- Bootstrap -->
-    <script src="libs/js/bootstrap.min.js"></script>
+    <div class="container">
+        <div class="main__block">
+            <picture class="main__image">
+                <img src="assets/imgs/not_what_you-re_looking_for.jpg"/>
+            </picture>
+            <p class="main__messsage">Essa não é a página que você estava procurando<span>.</span><span>.</span><span>.</span></p>
+            <div class="help__message">
+                <p>Lamento o ocorrido, mas caso precise de ajuda basta entrar em contato comigo por <a target="_blank" href="https://www.linkedin.com/in/mateus-andrade-costa-neri-520056129/">aqui</a>.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
